--- a/ML_projects/diabetes_prediction/diabetes_prediction.ipynb
+++ b/ML_projects/diabetes_prediction/diabetes_prediction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d42f5a41",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "38f7640a",
    "metadata": {},
    "outputs": [],
@@ -163,14 +163,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   Pregnancies  Glucose  BloodPressure  ...  DiabetesPedigreeFunction  Age  Outcome\n",
-       "0            6      148             72  ...                     0.627   50        1\n",
-       "1            1       85             66  ...                     0.351   31        0\n",
-       "2            8      183             64  ...                     0.672   32        1\n",
-       "3            1       89             66  ...                     0.167   21        0\n",
-       "4            0      137             40  ...                     2.288   33        1\n",
+       "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+       "0            6      148             72             35        0  33.6   \n",
+       "1            1       85             66             29        0  26.6   \n",
+       "2            8      183             64              0        0  23.3   \n",
+       "3            1       89             66             23       94  28.1   \n",
+       "4            0      137             40             35      168  43.1   \n",
        "\n",
-       "[5 rows x 9 columns]"
+       "   DiabetesPedigreeFunction  Age  Outcome  \n",
+       "0                     0.627   50        1  \n",
+       "1                     0.351   31        0  \n",
+       "2                     0.672   32        1  \n",
+       "3                     0.167   21        0  \n",
+       "4                     2.288   33        1  "
       ]
      },
      "execution_count": 4,
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3bea060e",
    "metadata": {},
    "outputs": [
@@ -194,7 +199,7 @@
        "(768, 9)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "661d0494",
    "metadata": {},
    "outputs": [
@@ -344,20 +349,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       Pregnancies     Glucose  ...         Age     Outcome\n",
-       "count   768.000000  768.000000  ...  768.000000  768.000000\n",
-       "mean      3.845052  120.894531  ...   33.240885    0.348958\n",
-       "std       3.369578   31.972618  ...   11.760232    0.476951\n",
-       "min       0.000000    0.000000  ...   21.000000    0.000000\n",
-       "25%       1.000000   99.000000  ...   24.000000    0.000000\n",
-       "50%       3.000000  117.000000  ...   29.000000    0.000000\n",
-       "75%       6.000000  140.250000  ...   41.000000    1.000000\n",
-       "max      17.000000  199.000000  ...   81.000000    1.000000\n",
+       "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
+       "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
+       "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
+       "std       3.369578   31.972618      19.355807      15.952218  115.244002   \n",
+       "min       0.000000    0.000000       0.000000       0.000000    0.000000   \n",
+       "25%       1.000000   99.000000      62.000000       0.000000    0.000000   \n",
+       "50%       3.000000  117.000000      72.000000      23.000000   30.500000   \n",
+       "75%       6.000000  140.250000      80.000000      32.000000  127.250000   \n",
+       "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
        "\n",
-       "[8 rows x 9 columns]"
+       "              BMI  DiabetesPedigreeFunction         Age     Outcome  \n",
+       "count  768.000000                768.000000  768.000000  768.000000  \n",
+       "mean    31.992578                  0.471876   33.240885    0.348958  \n",
+       "std      7.884160                  0.331329   11.760232    0.476951  \n",
+       "min      0.000000                  0.078000   21.000000    0.000000  \n",
+       "25%     27.300000                  0.243750   24.000000    0.000000  \n",
+       "50%     32.000000                  0.372500   29.000000    0.000000  \n",
+       "75%     36.600000                  0.626250   41.000000    1.000000  \n",
+       "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "911e860e",
    "metadata": {},
    "outputs": [
@@ -382,7 +395,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cb69ceb3",
    "metadata": {},
    "outputs": [
@@ -469,12 +482,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         Pregnancies     Glucose  ...  DiabetesPedigreeFunction        Age\n",
-       "Outcome                           ...                                     \n",
-       "0           3.298000  109.980000  ...                  0.429734  31.190000\n",
-       "1           4.865672  141.257463  ...                  0.550500  37.067164\n",
+       "         Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
+       "Outcome                                                                      \n",
+       "0           3.298000  109.980000      68.184000      19.664000   68.792000   \n",
+       "1           4.865672  141.257463      70.824627      22.164179  100.335821   \n",
        "\n",
-       "[2 rows x 8 columns]"
+       "               BMI  DiabetesPedigreeFunction        Age  \n",
+       "Outcome                                                  \n",
+       "0        30.304200                  0.429734  31.190000  \n",
+       "1        35.142537                  0.550500  37.067164  "
       ]
      },
      "execution_count": 9,
@@ -509,18 +525,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Pregnancies  Glucose  BloodPressure  ...   BMI  DiabetesPedigreeFunction  Age\n",
-      "0              6      148             72  ...  33.6                     0.627   50\n",
-      "1              1       85             66  ...  26.6                     0.351   31\n",
-      "2              8      183             64  ...  23.3                     0.672   32\n",
-      "3              1       89             66  ...  28.1                     0.167   21\n",
-      "4              0      137             40  ...  43.1                     2.288   33\n",
-      "..           ...      ...            ...  ...   ...                       ...  ...\n",
-      "763           10      101             76  ...  32.9                     0.171   63\n",
-      "764            2      122             70  ...  36.8                     0.340   27\n",
-      "765            5      121             72  ...  26.2                     0.245   30\n",
-      "766            1      126             60  ...  30.1                     0.349   47\n",
-      "767            1       93             70  ...  30.4                     0.315   23\n",
+      "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+      "0              6      148             72             35        0  33.6   \n",
+      "1              1       85             66             29        0  26.6   \n",
+      "2              8      183             64              0        0  23.3   \n",
+      "3              1       89             66             23       94  28.1   \n",
+      "4              0      137             40             35      168  43.1   \n",
+      "..           ...      ...            ...            ...      ...   ...   \n",
+      "763           10      101             76             48      180  32.9   \n",
+      "764            2      122             70             27        0  36.8   \n",
+      "765            5      121             72             23      112  26.2   \n",
+      "766            1      126             60              0        0  30.1   \n",
+      "767            1       93             70             31        0  30.4   \n",
+      "\n",
+      "     DiabetesPedigreeFunction  Age  \n",
+      "0                       0.627   50  \n",
+      "1                       0.351   31  \n",
+      "2                       0.672   32  \n",
+      "3                       0.167   21  \n",
+      "4                       2.288   33  \n",
+      "..                        ...  ...  \n",
+      "763                     0.171   63  \n",
+      "764                     0.340   27  \n",
+      "765                     0.245   30  \n",
+      "766                     0.349   47  \n",
+      "767                     0.315   23  \n",
       "\n",
       "[768 rows x 8 columns]\n"
      ]
@@ -1413,11 +1442,27 @@
     "test_data_accuracy = accuracy_score(Y_test, X_test_prediction)\n",
     "print('Accuracy score of test data : ', test_data_accuracy)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cf7fe28",
+   "metadata": {},
+   "source": [
+    "***Making a predictive system***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe8c56f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.2)",
    "language": "python",
    "name": "python3"
   },
